# smug

./: .gitignore  CMakeCache.extras.txt  CMakeLists.txt  Elements-TODO.txt  Elements-mechanics.txt  Issues.txt  README.md  allocation responsibilities.txt
1_src/audio/: CMakeLists.txt  audio.c  sound.c  soundfactory.c
1_src/engine/: body.c  engine.c  gameobject.c  mainloop.c
1_src/graphics/: graphics.c  image.c  renderbatch.c  sprite.c  spriteanimation.c  spritesheet.c  texture.c
1_src/graphics/lodepng/: lodepng.c
1_src/input/: CMakeLists.txt  controller.c  controllerscheme.c  input.c
1_src/platform/: file.c
1_src/utils/: CMakeLists.txt  console.c  general.c  linkedlist.c  map.c  sstring.c  stdout_console.c  stream.c  string_console.c  timer.c
2_headers/: allsmug.h  common.h
2_headers/audio/: audio.h  myfmod.h  sound.h  soundfactory.h
2_headers/engine/: body.h  engine.h  gameobject.h  mainloop.h
2_headers/graphics/: camera.h  drawable.h  graphics.h  renderbatch.h  renderqueue.h  sprite.h  spriteanimation.h  spritesheet.h  texture.h  texture_internal.h
2_headers/input/: controller.h  controllerscheme.h  input.h
2_headers/utils/: console.h  general.h  linkedlist.h  log.h  map.h  null_console.h  rectangle.h  sstring.h  stream.h  timer.h
3_guitest/: CMakeLists.txt  drawrect.c  drawtexture.c  game.c  input.c  renderqueue.c  sprite.c  spritesheet.c  window-ortho.c
3_guitest/audio/: test.c
3_guitest/elements/: CMakeLists.txt  actiongauge.c  ambience.c  ambience.h  area.c  area.h  attack.c  attack.h  avatar.c  avatar.h  characterlogic.c  characterlogic.h  elements.c  map1.c  maps.h  monster.c  monster.h  monster_protected.h  objects.c  objects.h
3_guitest/elements/monsters/: bee.c  bee.h  beetle.c  beetle.h  fireskull.c  fireskull.h  goblin.c  goblin.h  golem.c  golem.h  monkey.c  monkey.h  mushroom.c  mushroom.h  skeleton.c  skeleton.h  snail.c  snail.h  tortoise.c  tortoise.h
4_test/: AllTests.c
4_test/engine/: CMakeLists.txt
4_test/graphics/: CMakeLists.txt  imagetest.c  renderbatchtest.c  spritesheettest.c  texturetest.c
4_test/utils/: CMakeLists.txt  linkedlisttest.c  logtest.c  streamtest.c
5_res/: landscape.txt
5_res/characters/monsters/: 16x32.txt
5_res/gui/: gauge.txt
5_res/maps/: map1.txt
guitest/: CMakeLists.txt  console_demo.c  drawrect.c  drawtexture.c  fullscreen.c  game.c  guitest.c  input.c  renderqueue.c  sprite.c  spritesheet.c  window-ortho.c  window.c
guitest/audio/: CMakeLists.txt
guitest/elements/: CMakeLists.txt  actiongauge.c  actiongauge.h  attack.c  attack.h  avatar.c  avatar.h  elements.c  map1.c  maps.h  monster.c  monster.h  objects.h
headers/: common.h  linkedlist.h
headers/audio/: myfmod.h
headers/engine/: collisiondetector.h  engine.h  gameobject.h  mainloop.h
headers/graphics/: colorarray.h  drawable.h  drawable_internal.h  drawable_type.h  graphics.h  image.h  image_internal.h  internal.h  renderbatch.h  renderqueue.h  sprite.h  sprite_internal.h  sprite_type.h  spriteanimation.h  spritesheet.h  texcoordarray.h  texture.h  texture_internal.h  texture_type.h  vertexarray.h
headers/input/: controller.h
headers/platform/: file.h
headers/utils/: binarytree.h  console.h  console_internal.h  console_type.h  hook.h  linkedlist.h  linkedlist_type.h  log.h  map.h  null_console.h  rectangle.h  rectangle_type.h  stdout_console.h  string_console.h
res/: buildings.txt
res/characters/: rpg_sprite_walk.txt
res/characters/monsters/: 32x32.txt
res/inquisitor/: inquisitor-tiles.txt
src/audio/: CMakeLists.txt  audio.c
src/engine/: CMakeLists.txt  collisiondetector.c  engine.c  gameobject.c  mainloop.c
src/graphics/: CMakeLists.txt  camera.c  colorarray.c  drawable.c  graphics.c  image.c  renderbatch.c  renderqueue.c  sprite.c  spriteanimation.c  spritesheet.c  texcoordarray.c  texture.c  vertexarray.c
src/input/: CMakeLists.txt  controller.c  input.c
src/platform/: CMakeLists.txt  file.c
src/utils/: CMakeLists.txt  binarytree.c  hook.c  linkedlist.c  log.c  map.c  null_console.c  rectangle.c  stdout_console.c  string_console.c
test/: AllTests.c  CMakeLists.txt  linkedlisttest.c
test/engine/: CMakeLists.txt  bodytest.c  gameobjecttest.c
test/graphics/: CMakeLists.txt  colorarraytest.c  imagetest.c  renderbatchtest.c  spriteanimationtest.c  spritesheettest.c  texturetest.c  vertexarraytest.c
test/headers/: CuTest.h
test/utils/: CMakeLists.txt  binarytreetest.c  linkedlisttest.c  logtest.c  maptest.c  stringconsoletest.c
tools/include/: fmod.h
tools/lib/: fmodexL_lcc.lib  fmodex_lcc.lib
